created base controller to open support for object orientated design
completed the menuBarViewController syncing with pageViewController

fixed the compiling issue with distribution cert

--- a/MultiTask/Base.lproj/Main.storyboard
+++ b/MultiTask/Base.lproj/Main.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Dynamic Tab Bar Controller-->
+        <!--Base Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
             <objects>
-                <tabBarController id="49e-Tb-3d3" customClass="DynamicTabBarController" customModule="MultiTask" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController id="49e-Tb-3d3" customClass="BaseTabBarController" customModule="MultiTask" customModuleProvider="target" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" barStyle="black" translucent="NO" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
@@ -37,7 +37,15 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oYP-x6-4sH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="547" y="59"/>
+            <point key="canvasLocation" x="213" y="124"/>
+        </scene>
+        <!--HomeTab-->
+        <scene sceneID="j6M-Fl-CtX">
+            <objects>
+                <viewControllerPlaceholder storyboardName="HomeTab" id="tHN-5A-HlK" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wby-ct-DHa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="212" y="225"/>
         </scene>
     </scenes>
     <resources>
