--- a/MultiTask/ItemCell.xib
+++ b/MultiTask/ItemCell.xib
@@ -18,10 +18,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cKm-45-CUT">
-                        <rect key="frame" x="16" y="8" width="226" height="134.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="258" height="150.5"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="titleTextView" textAlignment="justified" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9TT-hU-Fuw">
-                                <rect key="frame" x="16" y="8" width="194" height="88.5"/>
+                                <rect key="frame" x="16" y="8" width="226" height="103.5"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
@@ -29,7 +29,7 @@
                                 <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES" calendarEvent="YES" shipmentTrackingNumber="YES" flightNumber="YES" lookupSuggestion="YES"/>
                             </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="subtitleLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ckK-h4-crJ">
-                                <rect key="frame" x="16" y="96.5" width="194" height="15"/>
+                                <rect key="frame" x="16" y="111.5" width="226" height="15"/>
                                 <color key="backgroundColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="15" id="SHg-UL-mj2"/>
@@ -39,7 +39,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="ot4-0g-sdQ">
-                                <rect key="frame" x="16" y="111.5" width="142.5" height="15"/>
+                                <rect key="frame" x="16" y="126.5" width="142.5" height="15"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dateLabel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BPu-Cd-47D">
                                         <rect key="frame" x="0.0" y="0.0" width="52" height="15"/>
@@ -60,16 +60,26 @@
                                     <constraint firstAttribute="height" constant="15" id="zMZ-QF-3rO"/>
                                 </constraints>
                             </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AnC-KY-4i7">
+                                <rect key="frame" x="16" y="149.5" width="242" height="1"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="038-30-3OQ"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.49803921569999998" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="9TT-hU-Fuw" firstAttribute="top" secondItem="cKm-45-CUT" secondAttribute="top" constant="8" id="44V-YS-A8S"/>
+                            <constraint firstItem="AnC-KY-4i7" firstAttribute="leading" secondItem="cKm-45-CUT" secondAttribute="leading" constant="16" id="7uH-Xo-g7G"/>
                             <constraint firstItem="9TT-hU-Fuw" firstAttribute="leading" secondItem="cKm-45-CUT" secondAttribute="leading" constant="16" id="8R6-Tu-9Yk"/>
+                            <constraint firstAttribute="bottom" secondItem="AnC-KY-4i7" secondAttribute="bottom" id="Di4-JE-vRj"/>
+                            <constraint firstAttribute="trailing" secondItem="AnC-KY-4i7" secondAttribute="trailing" id="GqS-ES-9AI"/>
                             <constraint firstItem="ckK-h4-crJ" firstAttribute="top" secondItem="9TT-hU-Fuw" secondAttribute="bottom" id="KUv-5i-VhM"/>
                             <constraint firstAttribute="trailing" secondItem="ckK-h4-crJ" secondAttribute="trailing" constant="16" id="OyN-f1-1KO"/>
                             <constraint firstItem="ckK-h4-crJ" firstAttribute="leading" secondItem="cKm-45-CUT" secondAttribute="leading" constant="16" id="aqt-uu-GMj"/>
-                            <constraint firstAttribute="bottom" secondItem="ot4-0g-sdQ" secondAttribute="bottom" constant="8" id="eu3-a4-QhH"/>
                             <constraint firstItem="ot4-0g-sdQ" firstAttribute="top" secondItem="ckK-h4-crJ" secondAttribute="bottom" id="fD7-hl-brs"/>
+                            <constraint firstItem="AnC-KY-4i7" firstAttribute="top" secondItem="ot4-0g-sdQ" secondAttribute="bottom" constant="8" id="fH5-Xb-22H"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ot4-0g-sdQ" secondAttribute="trailing" constant="16" id="kJM-l5-3d8"/>
                             <constraint firstItem="ot4-0g-sdQ" firstAttribute="leading" secondItem="cKm-45-CUT" secondAttribute="leading" constant="16" id="kLS-MU-U7N"/>
                             <constraint firstAttribute="trailing" secondItem="9TT-hU-Fuw" secondAttribute="trailing" constant="16" id="prN-Hd-HU8"/>
@@ -77,10 +87,10 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="cKm-45-CUT" firstAttribute="top" secondItem="zGu-Ah-KWW" secondAttribute="top" constant="8" id="EZZ-27-0Yh"/>
-                    <constraint firstAttribute="bottom" secondItem="cKm-45-CUT" secondAttribute="bottom" constant="8" id="Tmi-Rh-3xk"/>
-                    <constraint firstAttribute="trailing" secondItem="cKm-45-CUT" secondAttribute="trailing" constant="16" id="Zje-MB-Azg"/>
-                    <constraint firstItem="cKm-45-CUT" firstAttribute="leading" secondItem="zGu-Ah-KWW" secondAttribute="leading" constant="16" id="mJ7-cw-8XL"/>
+                    <constraint firstItem="cKm-45-CUT" firstAttribute="top" secondItem="zGu-Ah-KWW" secondAttribute="top" id="EZZ-27-0Yh"/>
+                    <constraint firstAttribute="bottom" secondItem="cKm-45-CUT" secondAttribute="bottom" id="Tmi-Rh-3xk"/>
+                    <constraint firstAttribute="trailing" secondItem="cKm-45-CUT" secondAttribute="trailing" id="Zje-MB-Azg"/>
+                    <constraint firstItem="cKm-45-CUT" firstAttribute="leading" secondItem="zGu-Ah-KWW" secondAttribute="leading" id="mJ7-cw-8XL"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -88,6 +98,7 @@
                 <outlet property="containerView" destination="cKm-45-CUT" id="5Zy-U3-pd5"/>
                 <outlet property="dateLabel" destination="BPu-Cd-47D" id="8T8-Hk-5bJ"/>
                 <outlet property="delegateLabel" destination="raS-eD-xv7" id="M3z-ry-BdZ"/>
+                <outlet property="dividerView" destination="AnC-KY-4i7" id="df0-07-M9y"/>
                 <outlet property="subtitleLabel" destination="ckK-h4-crJ" id="fes-Dv-Bx0"/>
                 <outlet property="titleTextView" destination="9TT-hU-Fuw" id="lRW-ut-RZy"/>
             </connections>
