--- a/MultiTask/TasksTab.storyboard
+++ b/MultiTask/TasksTab.storyboard
@@ -522,6 +522,36 @@
             </objects>
             <point key="canvasLocation" x="5769" y="-405"/>
         </scene>
+        <!--Search Results View Controller-->
+        <scene sceneID="TGc-Cj-TdJ">
+            <objects>
+                <viewController storyboardIdentifier="SearchResultsViewController" id="aj3-JE-OWh" customClass="SearchResultsViewController" customModule="MultiTask" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Fy2-pd-Pje">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="G2s-xz-OYR">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="G2s-xz-OYR" firstAttribute="trailing" secondItem="cBU-ml-mB6" secondAttribute="trailing" id="Frv-Ee-bLh"/>
+                            <constraint firstItem="G2s-xz-OYR" firstAttribute="top" secondItem="cBU-ml-mB6" secondAttribute="top" id="Oby-lB-B6W"/>
+                            <constraint firstItem="G2s-xz-OYR" firstAttribute="leading" secondItem="cBU-ml-mB6" secondAttribute="leading" id="hGW-Hg-oED"/>
+                            <constraint firstItem="cBU-ml-mB6" firstAttribute="bottom" secondItem="G2s-xz-OYR" secondAttribute="bottom" id="wF5-EA-ehv"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="cBU-ml-mB6"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="G2s-xz-OYR" id="l6u-0c-8JX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="A2b-76-FRf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6785" y="-955"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Plus" width="50" height="50"/>
